--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,13 @@
-body {
-    overflow: hidden;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html, body {
+    background: rgb(174, 228, 238);
+    background: radial-gradient(circle, rgb(174, 238, 230) 0%, rgba(148,187,233,1) 100%);
+    height: 100%;
 }
 
 #main {
@@ -15,6 +23,11 @@ body {
     align-items: center;
 }
 
+h1 {
+    font-size: 42px;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
+}
 
 img {
     height: 480px;
@@ -23,4 +36,57 @@ img {
 
 #search_nav {
     display: flex;
+}
+
+#search_field {
+    padding: 18px;
+    border: none;
+    font-size: 18px;
+}
+
+#search_btn {
+    padding: 18px 28px 18px 28px;
+    border: none;
+    cursor: pointer;
+    color: white;
+    background: linear-gradient(to right, rgb(230, 70, 182), rgb(255, 102, 102)) 100% / 300%;    
+    transition: 300ms background-position ease-in-out;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+#search_btn:hover {
+    background: linear-gradient(to left, rgb(230, 70, 182), rgb(255, 102, 102)) 100% / 300%;    
+
+}
+
+#refresh_btn_container {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    background: black;
+    font-family: "PT Mono", monospace;
+    font-weight: bold;
+    padding: 7px 25px;
+    font-size: 14px;
+}
+
+#refresh_btn {
+    border: none;
+    cursor: pointer;
+    background: linear-gradient(to right, rgb(49, 145, 255), rgb(0, 230, 204)) text;
+    -webkit-text-fill-color: transparent;
+    font-weight: bold;
+    margin: 2px 0px;
+    font-weight: bold;
+    font-size: 14px;
+    transition: 300ms background-position ease-in-out;
+    background-size: 300% ;
+    background-position: left;
+}
+
+#refresh_btn:hover {
+    background-position: right; 
 }
