--- a/styles.css
+++ b/styles.css
@@ -6,16 +6,18 @@
 
 html, body {
     background: rgb(174, 228, 238);
-    background: radial-gradient(circle, rgb(174, 238, 230) 0%, rgba(148,187,233,1) 100%);
+    background: radial-gradient(circle, rgb(163, 241, 232) 0%, rgb(133, 180, 234) 100%);
     height: 100%;
+    font-family: "Poppins", serif;
+    overflow: hidden;
 }
 
 #main {
     margin-top: 80px;
     margin-right: auto;
     margin-left: auto;
-    height: 680px;
-    width: 680px;
+    height: 740px;
+    width: 740px;
     gap: 12px;
     display: flex;
     flex-direction: column;
@@ -25,13 +27,13 @@ html, body {
 
 h1 {
     font-size: 42px;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-weight: bold;
+    font-family: "Poppins", serif;
+    font-weight: 900;
 }
 
 img {
-    height: 480px;
-    width: 480px;
+    height: 600px;
+    width: 600px;
 }
 
 #search_nav {
@@ -57,7 +59,6 @@ img {
 
 #search_btn:hover {
     background: linear-gradient(to left, rgb(230, 70, 182), rgb(255, 102, 102)) 100% / 300%;    
-
 }
 
 #refresh_btn_container {
@@ -66,8 +67,7 @@ img {
     align-items: center;
     -webkit-box-pack: center;
     justify-content: center;
-    background: black;
-    font-family: "PT Mono", monospace;
+    background: rgb(20, 132, 251);
     font-weight: bold;
     padding: 7px 25px;
     font-size: 14px;
@@ -76,7 +76,7 @@ img {
 #refresh_btn {
     border: none;
     cursor: pointer;
-    background: linear-gradient(to right, rgb(49, 145, 255), rgb(0, 230, 204)) text;
+    background: white text;
     -webkit-text-fill-color: transparent;
     font-weight: bold;
     margin: 2px 0px;
